# xx-admin-service

./: .env.sample  README.md  pyproject.toml
app/: dependencies.py  main.py
app/core/: config.py  db.py  security.py
app/dependencies/: database.py
app/internal/: admin.py
app/routers/: admin.py  items.py  users.py
app/services/: admin.py
